--- a/vapp/public/index.html
+++ b/vapp/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>vapp</title>
   </head>
-  <body>
+  <body class="bg-gray-800">
     <noscript>
       <strong>We're sorry but vapp doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
